--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>PTT Software Co.,Ltd</title>
 
         <link rel="icon" href="./logo12.jpg" type="image/jpg" sizes="16x16">
@@ -12,6 +13,10 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
         <style type="text/css">
+
+            .elfsight-app-b99d31da-7b32-4032-8974-a69d8a0826ee{
+                overflow-x: hidden !important;
+            }
 
             .banners{
                 height: 100vh;
@@ -48,14 +53,14 @@
         <header>
 
             <!-- Start nav bar -->
-                <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+                <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top px-3">
 
-                    <a href="index.html" class="navbar-brand mx-3">
+                    <a href="index.html" class="navbar-brand">
                         <img src="https://icon-library.com/images/icon-logo-png/icon-logo-png-11.jpg" alt="" width="50px" />
                         <span class="ms-2">PTT Software Co.,Ltd</span>
                     </a>
 
-                    <button type="button" class="navbar-toggler mx-3" data-bs-toggle="collapse" data-bs-target="#nav"><i class="navbar-toggler-icon"></i></button>
+                    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav"><i class="navbar-toggler-icon"></i></button>
 
                     <div id="nav" class="navbar-collapse collapse justify-content-between">
 
